{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 317,
  "lineage": "e3c6894d-0185-6796-ac81-c5c1b4c59306",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "grafana-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:651868950963:loadbalancer/grafana-asg-elb",
            "availability_zones": [
              "eu-north-1a",
              "eu-north-1b",
              "eu-north-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "grafana-asg-elb-203662973.eu-north-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 150,
                "target": "TCP:3000",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "grafana-asg-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 3000,
                "instance_protocol": "http",
                "lb_port": 3000,
                "lb_protocol": "http"
              }
            ],
            "name": "grafana-asg-elb",
            "security_groups": [
              "sg-0a3a573d9a6c99d01"
            ],
            "source_security_group": "651868950963/grafana-elb-sg",
            "source_security_group_id": "sg-0a3a573d9a6c99d01",
            "subnets": [
              "subnet-10bf466b",
              "subnet-20d7cf6a",
              "subnet-d94f90b0"
            ],
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.elb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:651868950963:security-group/sg-0a3a573d9a6c99d01",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3a573d9a6c99d01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "grafana-elb-sg",
            "name_prefix": null,
            "owner_id": "651868950963",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e865f67"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:651868950963:security-group/sg-03c9e751a48d538b4",
            "description": "Security group for grafana and influx instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c9e751a48d538b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "grafana_security_group",
            "name_prefix": null,
            "owner_id": "651868950963",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e865f67"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "grafana",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3000,
            "id": "sgrule-1039590747",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03c9e751a48d538b4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "influxdb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8086,
            "id": "sgrule-1405758854",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03c9e751a48d538b4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8086,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.instance"
          ]
        }
      ]
    }
  ]
}